# napari-debcr

./: README.md  pyproject.toml
src/napari_debcr/: __init__.py  _data_transform_widget.py  _inference_widget.py  _input_data_widget.py  _load_weights_widget.py  _log_widget.py  _model_configs_widget.py  _plugin.py  _prediction_widget.py  _preprocess_widget.py  _reader.py  _training_widget.py  _widget.py  napari.yaml
src/napari_debcr/_tests/: test_widget.py
