[project]
name = "napari-debcr"
dynamic = ["version"]
description = "A plugin to use DeBCR for microscopy images deblurring in Napari"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "image processing", "deep learning",
    "BCR", "waveletes", "BCR-Net", "m-rBCR", "s-rBCR",
    "denoising", "deblurring", "deconvolution",
    "confocal microscopy", "widefield microscopy",
    "fluorescent microscopy", "light microscopy"
]
maintainers = [{ name = "Artsemi Yushkevich" }]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "qtpy",
    "scikit-image"
]

[project.optional-dependencies]
tf-cpu = [ "debcr[tf-cpu]@git+https://github.com/DeBCR/DeBCR" ]
tf-gpu = [ "debcr[tf-gpu]@git+https://github.com/DeBCR/DeBCR" ]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
napari-debcr = "napari_debcr:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/DeBCR/napari-debcr/issues"
"Documentation" = "https://github.com/DeBCR/napari-debcr#README.md"
"Source Code" = "https://github.com/DeBCR/napari-debcr"
"User Support" = "https://github.com/DeBCR/napari-debcr/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]


[tool.setuptools.dynamic]
version = {attr = "napari_debcr.__init__.__version__"}

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py38"
fix = true
